# causaltrail

./: .gitignore  CMakeLists.txt  CausalAnalysisTest.cmake  CausalTrail.md  Combinations.h  Controller.cpp  Controller.h  DataDistribution.cpp  DataDistribution.h  Discretiser.cpp  Discretiser.h  EM.cpp  EM.h  Factor.cpp  Factor.h  Interventions.cpp  Interventions.h  Matrix.h  Network.cpp  Network.h  NetworkController.cpp  NetworkController.h  Node.cpp  Node.h  ObservationHandler.cpp  ObservationHandler.h  Parser.cpp  Parser.h  ProbabilityHandler.cpp  ProbabilityHandler.h  QueryExecuter.cpp  QueryExecuter.h  README.md  main.cpp  readme.txt
Gui-Documentation-HTML/: CausalTrailGuiDoku.4ct  CausalTrailGuiDoku.4tc  CausalTrailGuiDoku.aux  CausalTrailGuiDoku.css  CausalTrailGuiDoku.dvi  CausalTrailGuiDoku.html  CausalTrailGuiDoku.idv  CausalTrailGuiDoku.lg  CausalTrailGuiDoku.tex  CausalTrailGuiDoku.toc  CausalTrailGuiDoku.xref  config.cfg
Gui-Documentation-HTML/pic/: .directory  Logo-Universitaet_des_Saarlandes.eps  convert.sh  cpt.eps  dataView.eps  dialogViewData.eps  discretisationInteractive.eps  discretisationSelection.eps  exampleAll.eps  gui2.eps  gui4.eps  loadCPT.eps  menu1.eps  menu2.eps  queryHistory.eps  queryInputDirect.eps  zbi-logo.eps
Gui-Documentation-HTML/tex/: .nfs000000000000582b00002577  .nfs0000000000014a7300001ec7  .nfs000000000001f2e300001d04  main.aux  main.tex  tit.aux  tit.tex
cmake/: CompilerSpecific.cmake  gui_config.h.cmake
core/: CMakeLists.txt  Combinations.h  DataDistribution.cpp  DataDistribution.h  DiscretisationFactory.cpp  DiscretisationFactory.h  DiscretisationSettings.cpp  DiscretisationSettings.h  Discretisations.cpp  Discretisations.h  DiscretiseArithmeticMean.cpp  DiscretiseArithmeticMean.h  DiscretiseBracketMedians.cpp  DiscretiseBracketMedians.h  DiscretiseCeil.cpp  DiscretiseCeil.h  DiscretiseFloor.cpp  DiscretiseFloor.h  DiscretiseHarmonicMean.cpp  DiscretiseHarmonicMean.h  DiscretiseMapping.cpp  DiscretiseMapping.h  DiscretiseMedian.cpp  DiscretiseMedian.h  DiscretisePT.cpp  DiscretisePT.h  DiscretiseRound.cpp  DiscretiseRound.h  DiscretiseRoundingBased.cpp  DiscretiseRoundingBased.h  DiscretiseThreshold.cpp  DiscretiseThreshold.h  DiscretiseThresholdBased.cpp  DiscretiseThresholdBased.h  DiscretiseZScore.cpp  DiscretiseZScore.h  Discretiser.cpp  Discretiser.h  DotReader.cpp  DotReader.h  (+23 more)
data/: Malaria.na  Student.na  Student.sif  StudentData.txt  controlInsurance.txt  insurance.tgf  invalid.tgf  invalid1.na  invalidNodeID.tgf  test.tgf  testObservations.txt  w95pts.tgf
gui/: CMakeLists.txt  Config.cpp  Config.h  DataMatrixModel.cpp  DataMatrixModel.h  DataMatrixView.cpp  DataMatrixView.h  DataView.cpp  DataView.h  DataView.ui  DiscretisationSelection.cpp  DiscretisationSelection.h  DiscretisationSelection.ui  NetworkInstance.cpp  NetworkInstance.h  NodeGui.cpp  NodeGui.h  QueryView.cpp  QueryView.h  QueryView.ui  datastorage.cpp  datastorage.h  dataview.cpp  dataview.h  dataview.ui  discretisationselection.cpp  discretisationselection.h  discretisationselection.ui  edge.cpp  edge.h  listwidgetmulticopy.cpp  listwidgetmulticopy.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixpopup.cpp  matrixpopup.h  matrixpopup.ui  methodcombobox.cpp  (+5 more)
test/: CMakeLists.txt  CausalAnalysisTest.cmake  CombinationsTest.cpp  DataDistributionTest.cpp  DiscretisationSettingsTest.cpp  DiscretiserTest.cpp  DotReaderTest.cpp  EMTest.cpp  FactorTest.cpp  InterventionTest.cpp  JPorterTest.cpp  MatrixTest.cpp  NetworkControllerTest.cpp  NetworkTest.cpp  NodeTest.cpp  ParserTest.cpp  ProbabilityTest.cpp  QueryExecuterTest.cpp  QueryTest.cpp  SerializeDeserializeJsonTest.cpp  config.h.in
test/data/: MalariaData.txt  attributeLists.dot  compassGraph.dot  controlMalaria.txt  controlStudent.json  controlStudent.txt  cylicNetwork1.tgf  cylicNetwork2.tgf  dataStudent60.txt  edgeList.dot  insurance.tgf  invalid1.sif  invalid2.na  invalid2.sif  invalidControl1.txt  invalidControl2.txt  invalidControlStudent1.json  invalidControlStudent2.json  invalidEdge.tgf  jsonDiscretiserTest.json  jsonTest.json  jsonTestInvalid.json  simpleGraph.dot  testObservations.txt  testObservations2.txt  testObservationsIncludingNA.txt  varGenes.sif
